--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ body{
 }
 /* Custom cursor (desktop) */
 @media (pointer:fine){
-  body{cursor:url('/images/syringe.svg') 4 14, auto}
+  body{cursor:url('/images/heart.svg') 8 8, auto}
 }
 
 h1,h2,h3{font-family: 'e-Ukraine Head', 'e-Ukraine', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, "Helvetica Neue", Arial; margin:0 0 .6rem}
